# moviedb

./: .gitignore  Cargo.toml  README.md  moviedb-get.py  moviedb-post.py  moviedb-single.py
.cargo/: config.toml
.github/workflows/: codeql-analysis.yml
scripts/: bench.py  deploy.sh  migrate_dynamo.py
src/: db.rs  http.rs  main.rs  refresh.rs  util.rs
tests/: smoke_test.py
