cargo-features = ["codegen-backend"]

[package]
name = "moviedb"
version = "2.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
rusqlite = { version = "0.40", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.35", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Already pulled in transitively by axum/hyper/reqwest; declared directly
# only to stream GET / instead of buffering the whole table into one String.
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
codegen-backend = "cranelift"
